--- a/Pipfile
+++ b/Pipfile
@@ -5,23 +5,23 @@ name = "pypi"
 
 [packages]
 requests = "*"
-blinker==1.4
-click==6.6
-Flask==0.11.1
-Flask-Blogging==0.7.2
-Flask-Cache==0.13.1
-Flask-Login==0.4.0
-Flask-Principal==0.4.0
-Flask-WTF==0.13.1
-gunicorn==19.6.0
-itsdangerous==0.24
-Jinja2==2.8
-Markdown==2.6.7
-MarkupSafe==0.23
-SQLAlchemy==1.1.3
-virtualenv==15.0.3
-Werkzeug==0.11.11
-WTForms==2.1
+blinker = "*"
+click = "*"
+Flask = "*"
+Flask-Blogging = "*"
+Flask-Cache = "*"
+Flask-Login = "*"
+Flask-Principal = "*"
+Flask-WTF = "*"
+gunicorn = "*"
+itsdangerous = "*"
+Jinja2 = "*"
+Markdown = "*"
+MarkupSafe = "*"
+SQLAlchemy = "*"
+virtualenv = "*"
+Werkzeug = "*"
+WTForms = "*"
 
 
 [dev-packages]
